﻿zg 16.05.2014 14:27:13 +0200 - build 3905

1. после 3895 не работали клавиши выделения в комстроке.

drkns 15.05.2014 23:57:23 +0200 - build 3904

1. Поиcк теперь умеет сам решать, в какой кодировке надо искать текст. Слава роботам!

drkns 15.05.2014 01:45:08 +0200 - build 3903

1. Уточнение детектирования юникодного текста.

shmuel 15.05.2014 00:13:09 +0200 - build 3902

1. Продолжение 3896.

shmuel 14.05.2014 01:10:59 +0200 - build 3901

1. Уточнение 3896 (Фар падал при определённых обстоятельствах).

shmuel 13.05.2014 17:28:47 +0200 - build 3900

1. В 3896 сломалось возвращаемое значение Plugin.Call.

shmuel 13.05.2014 00:33:38 +0200 - build 3899

1. Продолжение 3896.

shmuel 12.05.2014 16:14:04 +0200 - build 3898

1. В 3896 сломалось возвращаемое значение Plugin.Menu.

zg 12.05.2014 13:39:44 +0200 - build 3897

1. 0002672: Неправильное поведение при работе с буфером обмена.
   при вставке пустой строки устанавливался признак наличия выделения, а само выделение - нет.

shmuel 12.05.2014 13:05:51 +0200 - build 3896

1. Рефакторинг в системе макросов.

zg 09.05.2014 00:19:23 +0200 - build 3895

1. рефакторинг ProcessKey.

svs 08.05.2014 20:34:04 +0400 - build 3894

1. Mantis#0002669: Гуид для меню с результатами поиска всех вхождений

    EditorFindAllListId         = {9BD3E306-EFB8-4113-8405-E7BADE8F0A59}  --> Menu.Id
    Редактор. Список всех найденных вхождений (F7 <All>).

w17 08.05.2014 16:17:06 +0400 - build 3893

1. M#2667: Вылет FAR при использовании регэкспа "[A-Z\\]+"

drkns 07.05.2014 00:00:37 +0200 - build 3892

1. Неправильно работала сортировка по расширению файлов с ':' в имени (да, и такое бывает).

drkns 05.05.2014 19:03:55 +0200 - build 3891

1. Уточнение 3890.

drkns 05.05.2014 18:52:24 +0200 - build 3890

1. Команда "title" добавляла лишний пробел в заголовок.

svs 05.05.2014 16:48:11 +0400 - build 3889

1. Уточнение build 3888
   1. Выключаем панели.