@@ -1,4 +1,8 @@
-﻿zg 16.05.2014 14:27:13 +0200 - build 3905
+﻿drkns 17.05.2014 14:43:09 +0200 - build 3906
+
+1. Падение при ввыборе черно-белой цветовой схемы.
+
+zg 16.05.2014 14:27:13 +0200 - build 3905
 
 1. после 3895 не работали клавиши выделения в комстроке.
 
